--- a/index.html
+++ b/index.html
@@ -2,15 +2,96 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>فلترة عملات بايننس</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <title>فلتر العملات</title>
+  <style>
+    body { font-family: Arial, sans-serif; background-color: #111; color: #fff; padding: 20px; }
+    .card { background: #333; margin: 10px 0; padding: 15px; border-radius: 5px; }
+    .card strong { font-size: 18px; color: #4CAF50; }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <h1>فلتر العملات - Binance</h1>
-    <div id="coins">جاري التحميل...</div>
-  </div>
-  <script src="script.js"></script>
+  <h1>فلتر العملات (Binance)</h1>
+  <div id="coins">جاري التحميل والتحليل...</div>
+
+  <script>
+    async function calculateRSI(closes, period = 14) {
+      let gains = 0, losses = 0;
+      for (let i = 1; i < period; i++) {
+        const change = closes[i] - closes[i - 1];
+        if (change > 0) gains += change;
+        else losses -= change;
+      }
+      const averageGain = gains / period;
+      const averageLoss = losses / period;
+      let rsi = 100 - (100 / (1 + (averageGain / averageLoss)));
+      return rsi;
+    }
+
+    // حساب MACD
+    function calculateMACD(closes) {
+      const ema12 = calculateEMA(closes, 12); // 12-day EMA
+      const ema26 = calculateEMA(closes, 26); // 26-day EMA
+      const macd = ema12.map((v, i) => v - ema26[i]); // MACD Line
+      const signal = calculateEMA(macd, 9); // Signal Line
+      return { macd, signal };
+    }
+
+    function calculateEMA(closes, period) {
+      const k = 2 / (period + 1);
+      let ema = [closes[0]]; // Starting point is the first closing price
+      for (let i = 1; i < closes.length; i++) {
+        ema.push(closes[i] * k + ema[i - 1] * (1 - k));
+      }
+      return ema;
+    }
+
+    function calculateSMA(closes, period) {
+      let sma = [];
+      for (let i = period - 1; i < closes.length; i++) {
+        sma.push(closes.slice(i - period + 1, i + 1).reduce((a, b) => a + b, 0) / period);
+      }
+      return sma;
+    }
+
+    async function fetchFilteredCoins() {
+      const response = await fetch("https://api.binance.com/api/v3/ticker/24hr");
+      const coins = await response.json();
+      const container = document.getElementById("coins");
+      container.innerHTML = "جاري التحميل والتحليل...";
+
+      const results = [];
+
+      for (const coin of coins) {
+        if (!coin.symbol.endsWith("USDT")) continue;
+        const change = parseFloat(coin.priceChangePercent);
+        if (change < 4) continue;
+
+        try {
+          const res = await fetch(`https://api.binance.com/api/v3/klines?symbol=${coin.symbol}&interval=15m&limit=100`);
+          const klines = await res.json();
+          const closes = klines.map(k => parseFloat(k[4]));
+          if (closes.length < 20) continue;
+          const rsi = await calculateRSI(closes.slice(-20));
+          const { macd, signal } = calculateMACD(closes.slice(-20));
+          const macdCrossUp = macd[macd.length - 1] > signal[signal.length - 1] && macd[macd.length - 2] < signal[signal.length - 2];
+          const sma50 = calculateSMA(closes, 50);
+          const sma200 = calculateSMA(closes, 200);
+          const momentum = sma50[sma50.length - 1] > sma200[sma200.length - 1];
+
+          if (rsi > 50 && macdCrossUp && momentum && parseFloat(coin.volume) > 1000000) {
+            results.push(`<div class="card"><strong>${coin.symbol}</strong> | MACD Cross Up | Volume: ${coin.volume} | Momentum Up | RSI: ${rsi.toFixed(2)} | Change: ${change.toFixed(2)}%</div>`);
+          }
+        } catch (e) {
+          console.log("Error in", coin.symbol);
+          continue;
+        }
+      }
+
+      container.innerHTML = results.length ? results.join("") : "<p>لا توجد عملات تحقق الشروط حاليًا.</p>";
+    }
+
+    fetchFilteredCoins();
+  </script>
 </body>
 </html>
